# connected_component_labelling

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_windows.txt  Makefile  README.md  cmake_install.cmake  connected_components  hmmmm.xcf  lol.xcf
header/: ccl.h  projection.h  skew.h  union.h
source/: ccl.cpp  main.cpp  projection.cpp  skew.cpp  union.cpp
